cabal-version: 1.12
name:           dux
version:        0.1.0.0
description:    Content-addressed data descriptions
homepage:       https://github.com/cronokirby/dux#readme
bug-reports:    https://github.com/cronokirby/dux/issues
author:         Lúcás Meier
maintainer:     cronokirby@gmail.com
copyright:      2019 Lúcás Meier
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/cronokirby/dux

library
  exposed-modules:
      Dux
  other-modules:
      Paths_dux
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , base16-bytestring >=0.1 && <0.2
    , binary >=0.8 && <0.9
    , bytestring >=0.10 && < 0.11
    , megaparsec >=7 && <8
    , relude >=0.5 && <0.6
    , SHA >=1.6 && <1.7
  default-language: Haskell2010

executable dux-exe
  main-is: Main.hs
  other-modules:
      Paths_dux
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , dux
  default-language: Haskell2010

test-suite dux-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_dux
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , dux
  default-language: Haskell2010
